com.github.lainsce.quilter (1.4.0) xenial; urgency=low

  * Show that the file is saved/unsaved.

 -- Lains <lainsce@airmail.cc>  Fri, 27 October 2017 17:40:00 -0300

com.github.lainsce.quilter (1.3.9) xenial; urgency=low

  * Add support for HiDPI icons.
  * Resize icons to fit the elementary icon grid.

 -- Lains <lainsce@airmail.cc>  Fri, 20 October 2017 17:00:00 -0300

com.github.lainsce.quilter (1.3.8) xenial; urgency=low

  * Add buttons to toggle Focus Mode and Dark Mode on the Status-bar.

 -- Lains <lainsce@airmail.cc>  Fri, 13 October 2017 17:35:00 -0300

 com.github.lainsce.quilter (1.3.7) xenial; urgency=low

   * Small fixes.

  -- Lains <lainsce@airmail.cc>  Mon, 9 October 2017 22:05:00 -0300

com.github.lainsce.quilter (1.3.6) xenial; urgency=low

  * Preferences - Show or hide the Status-bar in the current session.

 -- Lains <lainsce@airmail.cc>  Sun, 8 October 2017 11:05:00 -0300

com.github.lainsce.quilter (1.3.5) xenial; urgency=low

  * Focus Mode now has a better way of showing focus on the text.

 -- Lains <lainsce@airmail.cc>  Thu, 5 October 2017 14:14:00 -0300

com.github.lainsce.quilter (1.3.4) xenial; urgency=low

  * Added a statusbar showing how many words the file has.

 -- Lains <lainsce@airmail.cc>  Wed, 4 October 2017 10:14:00 -0300

com.github.lainsce.quilter (1.3.3) xenial; urgency=low

  * Small styling fixes all around.

 -- Lains <lainsce@airmail.cc>  Sun, 1 October 2017 01:14:00 -0300

com.github.lainsce.quilter (1.3.2) xenial; urgency=low

  * Ctrl-Z/Ctrl-Shift-Z now work properly.
  * All File I/O internal functions have been unified.
  * Spell-checking has been enabled.

 -- Lains <lainsce@airmail.cc>  Sat, 30 September 2017 00:04:00 -0300

com.github.lainsce.quilter (1.3.1) xenial; urgency=low

  * Small fixes all around to make Quilter work better.
  * You can now do Markdown Tables.

 -- Lains <lainsce@airmail.cc>  Fri, 29 September 2017 03:27:00 -0300

com.github.lainsce.quilter (1.3.0) xenial; urgency=low
