@@ -1,6 +1,7 @@
 com.github.lainsce.quilter (1.4.0) xenial; urgency=low
 
   * Show that the file is saved/unsaved.
+  * Count reading time.
 
  -- Lains <lainsce@airmail.cc>  Fri, 27 October 2017 17:40:00 -0300
 
